Add info to marketing.html and index.html. Change Hexterika Cyberlab's vibrant colors to the orginal ones for less distraction and more readability. Add services as a placeholder with text in every html files. Add Hexterika Breaks Free page and Instagram account link to marketing.html

--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="13" required></textarea>
                 <br>
-                <button type="submit">Send</button>
+                <button type="submit">Get In Touch</button>
               </form>
         </section>
         <section class="bg-1">
@@ -72,9 +72,9 @@
                 <p>More info about my projects and services available on the services page.</p>
             <h3>For other inquiries</h3>
                 <ul>
-                    <li><a href="mailto:hexterika.contact@hexterika-breaks-free.work.gd"><strong>Email: </strong>hexterika.contact@hexterika-breaks-free.work.gd <em>Prefer!</em></a></li>
-                    <li><a href="https://www.facebook.com/sangsongthong.chantaranothai/" target="_blank" rel="noopener noreferrer"><strong>Facebook </strong><em>Prefer!</em></a></li>
-                    <li><a href="https://www.instagram.com/hexterika301misc/" target="_blank" rel="noopener noreferrer"><strong>Instagram: </strong><em>Prefer!</em></a></li>
+                    <li><a href="mailto:hexterika.contact@hexterika-breaks-free.website"><strong>Email: </strong>hexterika.contact@hexterika-breaks-free.work.gd <em>Prefer!</em></a></li>
+                    <li><a href="https://www.facebook.com/share/167ysmzGrS/" target="_blank" rel="noopener noreferrer"><strong>Facebook </strong><em>Prefer!</em></a></li>
+                    <li><a href="https://www.instagram.com/hexterika.breaks.free?igsh=Znhra20xcHk4Mnpx" target="_blank" rel="noopener noreferrer"><strong>Instagram: </strong><em>Prefer!</em></a></li>
                     <li><a href="https://t.me/hexterikaHQ">Telegram</a></li>
                     <li><a href="https://wa.me/66982568888">WhatsApp</a></li>
                     <li><a href="line://ti/p/@discreteloner">Line</a></li>
