--- a/cyberlab.html
+++ b/cyberlab.html
@@ -37,9 +37,9 @@
         </section>
         <section class="bg-1">
             <h2>Service</h2>
-            <p>Brief or full service explanation</p>
-            <p>Coming Soon!</p>
-            <p>Send to Fiverr</p>
+            <p>Brief or full service explanation --> Coming Soon!</p>
+            <p>The service will be on Fiverr because it has both buyers and sellers protection. It will be the platform that handle all payments.</p>
+            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Coming Soon!</a>
         </section>
         <section class="bg-2">
             <h2>Projects</h2>
