--- a/designer.html
+++ b/designer.html
@@ -38,10 +38,9 @@
         </section>
         <section class="bg-1">
             <h2>Service</h2>
-            <p>Brief or full service explanation</p>
-            <p>Coming Soon!</p>
-            <p>Send to Fiverr</p>
-            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Fiverr</a>
+            <p>Brief or full service explanation --> Coming Soon!</p>
+            <p>The service will be on Fiverr because it has both buyers and sellers protection. It will be the platform that handle all payments.</p>
+            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Coming Soon!</a>
         </section>
         <section class="bg-2">
             <h2>Why Choose Me?</h2>
@@ -61,10 +60,10 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="13" required></textarea>
                 <br>
-                <button type="submit">Send</button>
+                <button type="submit">Get In Touch</button>
               </form>
         </section>
-        <section>
+        <section class="bg-2">
             <h2>Social Medias</h2>
             <ul>
                 <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
