--- a/marketing.html
+++ b/marketing.html
@@ -26,29 +26,39 @@
     <main>
         <section class="bg-1">
             <h1>Hexterika Marketing</h1>
+            <p>Hexterika Marketing is a division of Hexterika's multiple services that is focusing on my social media marketing skills.</p>
             <p>At Hexterika Marketing, I provide ...</p>
-            <p>Basically a short introduction paragraph or a few paragraphs.</p>
         </section>
         <section class="bg-2">
             <h2>Sample Works</h2>
-            <p>Screenshots Snippets - Use Carosole</p>
             <img src="assets/images/marketing/marketing_sample1_17Apr2025.jpg"/>
             <img src="assets/images/marketing/marketing_sample2_17Apr2025.jpg"/>
             <img src="assets/images/marketing/marketing_sample3_17Apr2025.jpg"/>
         </section>
         <section class="bg-1">
             <h2>Service</h2>
-            <p>Brief or full service explanation</p>
-            <p>Send to Fiverr</p>
-            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Site</a>
+            <p>Brief or full service explanation --> Coming Soon!</p>
+            <p>The service will be on Fiverr because it has both buyers and sellers protection. It will be the platform that handle all payments.</p>
+            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Coming Soon!</a>
         </section>
         <section class="bg-2">
             <h2>Projects</h2>
-            <p>Add screenshots</p>
+            <p>These two services of mine are the ones I am promoting through social media. Check the page about them in the links below for more detail. The links to their relavant social media pages and accounts are on their respect pages.</p>
+            <ul>
+                <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
+                <li><a href="designer.html">Hexterika Designer</a></li>
+            </ul>
         </section>
         <section class="bg-1">
             <h2>Why Choose Me?</h2>
-            <p></p>
+            <p>I have a social media marketing certificate by Meta.</p>
+            <p>The certificate is on Credly. It shows that I have taken a course or a learning path and took the test to earn it. This means I know what I am doing or have some idea and not just randomly and aimlessly post without any experience or understanding the strategic side of social media advertising. I also know how to use the tools from my learning journey as well.</p>
+            <p>Moreover, I am currently use this social media advertising / marketing skills of mine to promote my two other services:</p>
+            <ul>
+                <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
+                <li><a href="designer.html">Hexterika Designer</a></li>
+            </ul>
+            <p>While those social media accounts are still in their infant state, in time, I will have hands-on real world experience growing them.</p>
             <p>See my full qualification: </p>
             <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">Profile</a>
         </section>
@@ -64,7 +74,7 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="13" required></textarea>
                 <br>
-                <button type="submit">Send</button>
+                <button type="submit">Get In Touch</button>
             </form>
         </section>
         <section class="bg-1">
@@ -72,9 +82,8 @@
             <ul>
                 <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
                 <li><a href="https://example.com/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-                <li><a href="https://example.com/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+                <li><a href="https://www.instagram.com/hexterika.breaks.free?igsh=Znhra20xcHk4Mnpx" target="_blank" rel="noopener noreferrer">Instagram</a></li>
             </ul>
-            <p>Use icons + hover effect to describe the icons</p>
         </section>
     </main>
 
