--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <h1>Welcome to Hexterika Breaks Free</h1>
             <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong"/>
             <p>Beyond Boundaries — Creative, Secure, and Strategic Services at Hexterika Breaks Free.</p>
+            <p>At Hexterika Breaks Free, I - the founder of the Hexterika brand, believe in the idea that a person can have multiple interests in non-related fields and can turn them into potential sources of income.</p>
+            <p>Hexterika Breaks Free breaks away from traditional believes that restrict people's mind and creativity to small fews very closely related things to promote/suggest/encourage the ideas of pursuing one's passions and turn them into jobs skills that can help me earn some income as well as allows me to work in multiple unrelated fields.</p>
+            <p>This believe is what makes Hexterika brand unique and different.</p>
+            <p>In order to show others that my idea is doable, I create Hexterika Breaks Free to show people that it is possible to make this happen in real world. The "Breaks Free" part is inspired by my desire to break free from believes and norms to be me, to pursuit my passions and to be free from those norms.</p>
             <h2>See My Full Qualification</h2>
             <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">About Me Professional</a>
         </section>
