Add screenshots to assets/images/cyberlab so I have some sameple work pictures to showcase for Pentest reports. Add some text into cyberlab.html and index.html.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <section class="bg-1">
             <h1>Welcome to Hexterika Breaks Free</h1>
             <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong"/>
-            <p>Beyond Boundaries — Creative, Secure, and Strategic Services at Hexterika Breaks Free.</p>
-            <p>At Hexterika Breaks Free, I - the founder of the Hexterika brand, believe in the idea that a person can have multiple interests in non-related fields and can turn them into potential sources of income.</p>
-            <p>Hexterika Breaks Free breaks away from traditional believes that restrict people's mind and creativity to small fews very closely related things to promote/suggest/encourage the ideas of pursuing one's passions and turn them into jobs skills that can help me earn some income as well as allows me to work in multiple unrelated fields.</p>
-            <p>This believe is what makes Hexterika brand unique and different.</p>
-            <p>In order to show others that my idea is doable, I create Hexterika Breaks Free to show people that it is possible to make this happen in real world. The "Breaks Free" part is inspired by my desire to break free from believes and norms to be me, to pursuit my passions and to be free from those norms.</p>
+            <p><strong>Beyond Boundaries</strong> — Creative, Secure, and Strategic Services at Hexterika Breaks Free.</p>
+            <p>At Hexterika Breaks Free, I—the founder of the Hexterika brand—believe that a person can have multiple, unrelated interests and turn them into potential sources of income.</p>
+            <p>Hexterika Breaks Free challenges traditional beliefs that limit people's creativity and mindset to only a few closely related things. It encourages the pursuit of one's passions and turning them into job skills that generate income and allow work across unrelated fields.</p>
+            <p>This belief is what makes the Hexterika brand unique and different.</p>
+            <p>To show that this idea is possible, I created Hexterika Breaks Free as proof that it's achievable in the real world. The “Breaks Free” part represents my desire to break away from limiting norms, to be myself, follow my passions, and live freely.</p>
             <h2>See My Full Qualification</h2>
             <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">About Me Professional</a>
         </section>
