--- a/cyberlab.html
+++ b/cyberlab.html
@@ -26,37 +26,59 @@
     <main>
         <section class="bg-1">
             <h1>Hexterika Cyberlab</h1>
-            <p>At Hexterika Cyberlab, I provide ...</p>
-            <p>Basically a short introduction paragraph or a few paragraphs.</p>
+            <p>Welcome to Hexterika Cyberlab — the cybersecurity division of Hexterika Breaks Free. Here, I specialize in penetration testing services aimed at identifying and addressing security vulnerabilities before attackers can exploit them.</p>
+            <p>This is where I bring my hands-on experience and continuous learning into real-world application. The services I offer are based on practical skills developed through labs, CTFs, and mock reports.</p>
+            <p>More cybersecurity-related services will be added over time. Any new services I provide in this field will be listed and explained in the service section.</p>
         </section>
         <section class="bg-2">
             <h2>Sample Work</h2>
-            <p>Screenshots Snippets</p>
-            <p>Convert the report to PDF for clients to download</p>
-            <p>Share my GitHub link</p>
+            <p>Below are sample screenshots from my mock penetration testing report. These demonstrate how I structure findings, provide remediation steps, and document methodology.</p>
+            <div>
+                <img src="assets/images/cyberlab/mockPentestReportTableOfContent.png" alt=""/>
+                <img src="assets/images/cyberlab/mockPentestReportConfidentialityAndDisclaimer.png" alt=""/>
+                <img src="assets/images/cyberlab/mockPentestReportContactInfo.png" alt=""/>
+                <img src="assets/images/cyberlab/mockPentestReportFindingSeverityAndExecutiveSummary.png" alt=""/>
+                <img src="assets/images/cyberlab/mockPentestReportTestScope.png" alt=""/>
+                <img src="assets/images/cyberlab/mockPentestReportMethodology.png" alt=""/>
+            </div>
+            <p>You can view the full mock penetration testing report on GitHub:</p>
+            <a href="https://github.com/sangsongthong-hexterika/MockPenetrationTestingReport" target="_blank" rel="noopener noreferrer">View Report on GitHub</a>
         </section>
         <section class="bg-1">
             <h2>Service</h2>
-            <p>Brief or full service explanation --> Coming Soon!</p>
-            <p>The service will be on Fiverr because it has both buyers and sellers protection. It will be the platform that handle all payments.</p>
+            <p>Penetration testing and other cybersecurity services will be available soon!</p>
+            <p>All services will be offered via Fiverr to ensure buyer and seller protection, with the platform handling secure payments.</p>
             <a href="https://example.com" target="_blank" rel="noopener noreferrer">Coming Soon!</a>
         </section>
         <section class="bg-2">
             <h2>Projects</h2>
-            <p>These GitHub repositories showcase my write-ups and walkthroughs from various security labs. They offer step-by-step guides and insights into the penetration testing process, presented in an easy-to-follow, blog-style format.</p>
+            <p>These GitHub repositories are collections of my write-ups, walkthroughs, and mock reports based on hands-on cybersecurity lab challenges. The content comes from platforms like TryHackMe, PortSwigger Web Security Academy, and my own virtual home lab setups, including an Active Directory lab.</p>
+            <p>Each repository is organized by topic and documentation style. For example, the TryHackMe Walkthroughs repo contains step-by-step guides written after completing specific rooms, while the PortSwigger repo focuses on web security labs. The Mock Penetration Testing Reports repo includes report-style documentation based on scenarios built from lab exercises.</p>
+            <p>Some collections like the IT-Cybersecurity Oneshot repo include one-off topics I've encountered, such as command-line tricks or security concepts that support my broader learning. These are snapshots of knowledge I've picked up, whether or not I plan to expand on them immediately.</p>
+            <p>All repositories are self-contained, with individual README files explaining each project's purpose. While some topics are still in progress, these projects reflect my real learning journey and will continue to grow and improve over time. New additions aim to be more structured and refined, even if older ones remain as-is for historical context.</p>
             <ul>
-                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Mock Penetration Testing report</a></li>
-                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">TryHackMe walkthroughs</a></li>
-                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Port Swigger walkthroughs</a></li>
-                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">IT Cybersecurity Oneshots</a></li>
-                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Active Directory Virtual Home Lab 1</a></li>
-                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Bugcrowd Profile</a></li>
-                <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Bug Bounty Report Template</a></li>
+                <li><a href="https://github.com/sangsongthong-hexterika/MockPenetrationTestingReport" target="_blank" rel="noopener noreferrer">Mock Penetration Testing report</a></li>
+                <li><a href="https://github.com/sangsongthong-hexterika/TryHackMe-Walkthroughs" target="_blank" rel="noopener noreferrer">TryHackMe walkthroughs</a></li>
+                <li><a href="https://github.com/sangsongthong-hexterika/PortSwiggerWalkthroughs" target="_blank" rel="noopener noreferrer">Port Swigger walkthroughs</a></li>
+                <li><a href="https://github.com/sangsongthong-hexterika/IT-Cybersecurity-OneShots" target="_blank" rel="noopener noreferrer">IT Cybersecurity Oneshots</a></li>
+                <li><a href="https://github.com/sangsongthong-hexterika/AD-VirtualHomeLab1" target="_blank" rel="noopener noreferrer">Active Directory Virtual Home Lab 1</a></li>
+                <li><a href="https://github.com/sangsongthong-hexterika/BugBountyHunting" target="_blank" rel="noopener noreferrer">Bug Bounty Report Template</a></li>
+                <li><a href="https://bugcrowd.com/hexterika-cyberlab" target="_blank" rel="noopener noreferrer">Bugcrowd Profile</a></li>
             </ul>
         </section>
         <section class="bg-1">
             <h2>Why Choose Me?</h2>
-            <p>Something</p>
+            <p>I hold three cybersecurity-related certificates:</p>
+            <ul>
+                <li>CompTIA Security+</li>
+                <li>Certified in Cybersecurity (CC) by ISC2</li>
+                <li>Jr Penetration Tester Learning Path Certificate of Completion by TryHackMe</li>
+            </ul>
+            <p>I've gained hands-on experience in IT, cybersecurity, and ethical hacking through CTFs, labs, and projects such as TryHackMe challenges, PortSwigger Web Security Academy, and a virtual home lab.</p>
+            <p>The Projects section showcases write-ups, walkthroughs, and mock reports I created to demonstrate my skills and learning from these practical experiences.</p>
+            <p>I also have one year of work experience in a contract role at the Synchrotron Light Research Institute (Thailand), where I worked in the IT department. This provided real-world experience in a corporate environment, complementing my previous self-employed work as an IT support technician helping local clients.</p>
+            <p>To further develop my ethical hacking skills in real-world scenarios, I joined the Bug Bounty Program on Bugcrowd.</p>
+            <p>I'm committed to continuously improving and staying up to date with industry standards. My GitHub-hosted write-ups and walkthroughs reflect my learning journey. While they may still be a work in progress, they will continue to evolve into more structured and organized content.</p>
             <p>See my full qualification: </p>
             <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">Profile</a>
         </section>
