Turn a part of the text into comment because it is the instruction for me to visually improve the website later.

--- a/cyberlab.html
+++ b/cyberlab.html
@@ -106,7 +106,7 @@
                 <li><a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer">GitHub</a></li>
                 <li><a href="https://tryhackme.com/p/gexter5thm" target="_blank" rel="noopener noreferrer">TryHackMe Profile</a></li>
             </ul>
-        <p>Use icons + hover effect to describe the icons</p>
+        <!--Use icons + hover effect to describe the icons-->
         </section>
     </main>
         
