--- a/designer.html
+++ b/designer.html
@@ -50,7 +50,9 @@
         </section>
         <section class="bg-1">
             <h2>Contact</h2>
-            <form action="https://formspree.io/f/xovqzgke" method="POST">
+            <p>Contact me: <a href="mailto:hexterika.designer@hexterika-breaks-free.website">hexterika.designer@hexterika-breaks-free.website</a></p>
+            <!-- I had trouble with the backend form submission from Formspark and possibly Formspree as well. It triggered Windows Defender and Virus Total so I am going to come back to fix this later. For now I am just going to show my email instead.
+            <form action="https://example.com" method="POST">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 <br>
@@ -60,8 +62,9 @@
                 <label for="message">Message:</label>
                 <textarea id="message" name="message" rows="13" required></textarea>
                 <br>
-                <button type="submit">Get In Touch</button>
-              </form>
+                <button type="submit">Send</button>
+            </form>
+            -->
         </section>
         <section class="bg-2">
             <h2>Social Medias</h2>
