Add projects links to project section on designer.html

--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
                 <p>More info about my projects and services available on the services page.</p>
             <h3>For other inquiries</h3>
                 <ul>
-                    <li><a href="mailto:hexterika.contact@hexterika-breaks-free.website"><strong>Email: </strong>hexterika.contact@hexterika-breaks-free.work.gd <em>Prefer!</em></a></li>
+                    <li><a href="mailto:hexterika.contact@hexterika-breaks-free.website"><strong>Email: </strong>hexterika.contact@hexterika-breaks-free.website <em>Prefer!</em></a></li>
                     <li><a href="https://www.facebook.com/share/167ysmzGrS/" target="_blank" rel="noopener noreferrer"><strong>Facebook </strong><em>Prefer!</em></a></li>
                     <li><a href="https://www.instagram.com/hexterika.breaks.free?igsh=Znhra20xcHk4Mnpx" target="_blank" rel="noopener noreferrer"><strong>Instagram: </strong><em>Prefer!</em></a></li>
                     <li><a href="https://t.me/hexterikaHQ">Telegram</a></li>
