--- a/designer.html
+++ b/designer.html
@@ -34,7 +34,6 @@
             <p>Screenshots Snippets - Use Carosole</p>
             <p>Brief explanation</p>
             <p>Share my Figma links</p>
-            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Figma</a>
         </section>
         <section class="bg-1">
             <h2>Service</h2>
@@ -43,12 +42,23 @@
             <a href="https://example.com" target="_blank" rel="noopener noreferrer">Coming Soon!</a>
         </section>
         <section class="bg-2">
+            <h2>Projects</h2>
+            <ul>
+                <li><a href="https://www.figma.com/design/hFfuqzRMc54dnM0BnEA2r6/LittleLemonCapstone-Prototype?m=auto&t=qsNcey6fjUQflvqR-1" target="_blank" rel="noopener noreferrer">LittleLemonCapstone-Prototype</a></li>
+                <li><a href="https://www.figma.com/design/HadK0u8rd4VIVv1s5HqFt1/LittleLemonCapstoneProject-Wireframe?m=auto&t=03EP25cOVxzhtWrU-6" target="_blank" rel="noopener noreferrer">LittleLemonCapstoneProject-Wireframe</a></li>
+                <li><a href="https://www.figma.com/design/TcEI6RL94a7VglPy1BEivR/Prototype-TheLittleLemon?m=auto&t=03EP25cOVxzhtWrU-6" target="_blank" rel="noopener noreferrer">Prototype-TheLittleLemon</a></li>
+                <li><a href="https://www.figma.com/@sangsongthong" target="_blank" rel="noopener noreferrer">Figma Proflie</a></li>
+            </ul>
+        </section>
+        <section class="bg-1">
             <h2>Why Choose Me?</h2>
-            <p></p>
+            <p>I have taken a learning path on Coursera in UI/UX Design and Frontend Developer.</p>
+            <p>I have proof of my certificate on Credly. See my full qualification for references.</p>
+            <p>I have various projects to show in the sample works section.</p>
             <p>See my full qualification: </p>
             <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">Profile</a>
         </section>
-        <section class="bg-1">
+        <section class="bg-2">
             <h2>Contact</h2>
             <p>Contact me: <a href="mailto:hexterika.designer@hexterika-breaks-free.website">hexterika.designer@hexterika-breaks-free.website</a></p>
             <!-- I had trouble with the backend form submission from Formspark and possibly Formspree as well. It triggered Windows Defender and Virus Total so I am going to come back to fix this later. For now I am just going to show my email instead.
@@ -66,7 +76,7 @@
             </form>
             -->
         </section>
-        <section class="bg-2">
+        <section class="bg-1">
             <h2>Social Medias</h2>
             <ul>
                 <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
@@ -74,7 +84,6 @@
                 <li><a href="https://www.instagram.com/hexterika.designer?igsh=MW83dXM4aG92amtrNw==" target="_blank" rel="noopener noreferrer">Instagram</a></li>
                 <li><a href="https://example.com" target="_blank" rel="noopener noreferrer">Dribbble</a></li>
             </ul>
-            <p>Use icons + hover effect to describe the icons</p>
         </section>
     </main>
 
