Add padding and radius in all css. Add strong tag to nav on marketing.html. Add colors to marketing.css.

--- a/marketing.html
+++ b/marketing.html
@@ -13,11 +13,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
-                <li><a href="designer.html">Hexterika Designer</a></li>
-                <li><a href="marketing.html">Hexterika Marketing</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html"><strong>Home</strong></a></li>
+                <li><a href="cyberlab.html"><strong>Hexterika Cyberlab</strong></a></li>
+                <li><a href="designer.html"><strong>Hexterika Designer</strong></a></li>
+                <li><a href="marketing.html"><strong>Hexterika Marketing</strong></a></li>
+                <li><a href="contact.html"><strong>Contact</strong></a></li>
             </ul>
         </nav>
     </header>
