Add Upwork profile links to cyberlab.html and designer.html. Add Fiverr Figma Designer link to designer.html. Create a placeholder for Dribbble.

--- a/cyberlab.html
+++ b/cyberlab.html
@@ -46,9 +46,8 @@
         </section>
         <section class="bg-1">
             <h2>Service</h2>
-            <p>Penetration testing and other cybersecurity services will be available soon!</p>
-            <p>All services will be offered via Fiverr to ensure buyer and seller protection, with the platform handling secure payments.</p>
-            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Coming Soon!</a>
+            <p>All services will be offered via Upwork to ensure buyer and seller protection, with the platform handling secure payments.</p>
+            <a href="https://www.upwork.com/freelancers/~0180280b95fac18562?s=1484275220996608000" target="_blank" rel="noopener noreferrer">Hire Me On Upwork!</a>
         </section>
         <section class="bg-2">
             <h2>Projects</h2>
