--- a/designer.html
+++ b/designer.html
@@ -38,8 +38,10 @@
         <section class="bg-1">
             <h2>Service</h2>
             <p>Brief or full service explanation --> Coming Soon!</p>
-            <p>The service will be on Fiverr because it has both buyers and sellers protection. It will be the platform that handle all payments.</p>
-            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Coming Soon!</a>
+            <p>The service will be on Upwork, Fiverr, and Dribbble because it has both buyers and sellers protection. It will be the platform that handle all payments.</p>
+            <a href="https://www.upwork.com/freelancers/~0180280b95fac18562?s=1110580755057594368" target="_blank" rel="noopener noreferrer">Hire Me On Upwork!</a>
+            <a href="https://www.fiverr.com/s/bd3A65P" target="_blank" rel="noopener noreferrer">Hire Me On Fiverr!</a>
+            <a href="https://example.com" target="_blank" rel="noopener noreferrer">Hire Me On Dribbble!</a>
         </section>
         <section class="bg-2">
             <h2>Projects</h2>
