Re-structure my website to be both portfolio and business front. I added certs.html and services.html. I modified the index.html and cyberlab.html.

--- a/cyberlab.html
+++ b/cyberlab.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="assets/css/cyberlab.css">
 </head>
 <body>
-
     <!-- Header Section -->
     <header>
         <nav>
@@ -26,89 +25,72 @@
     <main>
         <section class="bg-1">
             <h1>Hexterika Cyberlab</h1>
-            <p>Welcome to Hexterika Cyberlab — the cybersecurity division of Hexterika Breaks Free. Here, I specialize in penetration testing services aimed at identifying and addressing security vulnerabilities before attackers can exploit them.</p>
-            <p>This is where I bring my hands-on experience and continuous learning into real-world application. The services I offer are based on practical skills developed through labs, CTFs, and mock reports.</p>
-            <p>More cybersecurity-related services will be added over time. Any new services I provide in this field will be listed and explained in the service section.</p>
-        </section>
-        <section class="bg-2">
-            <h2>Sample Work</h2>
-            <p>Below are sample screenshots from my mock penetration testing report. These demonstrate how I structure findings, provide remediation steps, and document methodology.</p>
-            <div>
-                <img src="assets/images/cyberlab/mockPentestReportTableOfContent.png" alt=""/>
-                <img src="assets/images/cyberlab/mockPentestReportConfidentialityAndDisclaimer.png" alt=""/>
-                <img src="assets/images/cyberlab/mockPentestReportContactInfo.png" alt=""/>
-                <img src="assets/images/cyberlab/mockPentestReportFindingSeverityAndExecutiveSummary.png" alt=""/>
-                <img src="assets/images/cyberlab/mockPentestReportTestScope.png" alt=""/>
-                <img src="assets/images/cyberlab/mockPentestReportMethodology.png" alt=""/>
-            </div>
-            <p>You can view the full mock penetration testing report on GitHub:</p>
-            <a href="https://github.com/sangsongthong-hexterika/MockPenetrationTestingReport" target="_blank" rel="noopener noreferrer">View Report on GitHub</a>
+            <p>Hexterika Cyberlab is my dedicated space to showcase practical work, skills, and learning in cybersecurity and IT. It focuses on hands-on experience through labs, write-ups, and personal projects — reflecting my journey as a self-driven learner and aspiring professional in this field.</p>
+            <p>This section showcases my applied cybersecurity skills through hands-on labs, write-ups, and self-driven projects. It reflects my capabilities and commitment to delivering real value in security-focused roles and collaborations.</p>
         </section>
         <section class="bg-1">
-            <h2>Service</h2>
-            <p>All services will be offered via Upwork to ensure buyer and seller protection, with the platform handling secure payments.</p>
-            <a href="https://www.upwork.com/freelancers/~0180280b95fac18562?s=1484275220996608000" target="_blank" rel="noopener noreferrer">Hire Me On Upwork!</a>
-        </section>
-        <section class="bg-2">
-            <h2>Projects</h2>
-            <p>These GitHub repositories are collections of my write-ups, walkthroughs, and mock reports based on hands-on cybersecurity lab challenges. The content comes from platforms like TryHackMe, PortSwigger Web Security Academy, and my own virtual home lab setups, including an Active Directory lab.</p>
-            <p>Each repository is organized by topic and documentation style. For example, the TryHackMe Walkthroughs repo contains step-by-step guides written after completing specific rooms, while the PortSwigger repo focuses on web security labs. The Mock Penetration Testing Reports repo includes report-style documentation based on scenarios built from lab exercises.</p>
-            <p>Some collections like the IT-Cybersecurity Oneshot repo include one-off topics I've encountered, such as command-line tricks or security concepts that support my broader learning. These are snapshots of knowledge I've picked up, whether or not I plan to expand on them immediately.</p>
-            <p>All repositories are self-contained, with individual README files explaining each project's purpose. While some topics are still in progress, these projects reflect my real learning journey and will continue to grow and improve over time. New additions aim to be more structured and refined, even if older ones remain as-is for historical context.</p>
-            <ul>
-                <li><a href="https://github.com/sangsongthong-hexterika/MockPenetrationTestingReport" target="_blank" rel="noopener noreferrer">Mock Penetration Testing report</a></li>
-                <li><a href="https://github.com/sangsongthong-hexterika/TryHackMe-Walkthroughs" target="_blank" rel="noopener noreferrer">TryHackMe walkthroughs</a></li>
-                <li><a href="https://github.com/sangsongthong-hexterika/PortSwiggerWalkthroughs" target="_blank" rel="noopener noreferrer">Port Swigger walkthroughs</a></li>
-                <li><a href="https://github.com/sangsongthong-hexterika/IT-Cybersecurity-OneShots" target="_blank" rel="noopener noreferrer">IT Cybersecurity Oneshots</a></li>
-                <li><a href="https://github.com/sangsongthong-hexterika/AD-VirtualHomeLab1" target="_blank" rel="noopener noreferrer">Active Directory Virtual Home Lab 1</a></li>
-                <li><a href="https://github.com/sangsongthong-hexterika/BugBountyHunting" target="_blank" rel="noopener noreferrer">Bug Bounty Report Template</a></li>
-                <li><a href="https://bugcrowd.com/hexterika-cyberlab" target="_blank" rel="noopener noreferrer">Bugcrowd Profile</a></li>
-            </ul>
-        </section>
-        <section class="bg-1">
-            <h2>Why Choose Me?</h2>
-            <p>I hold three cybersecurity-related certificates:</p>
+            <h2>My Cybersecurity Journey</h2>
+            <p>I hold key cybersecurity certifications that validate my foundational knowledge:</p>
             <ul>
                 <li>CompTIA Security+</li>
                 <li>Certified in Cybersecurity (CC) by ISC2</li>
-                <li>Jr Penetration Tester Learning Path Certificate of Completion by TryHackMe</li>
+                <li>Jr Penetration Tester Learning Path (TryHackMe)</li>
             </ul>
-            <p>I've gained hands-on experience in IT, cybersecurity, and ethical hacking through CTFs, labs, and projects such as TryHackMe challenges, PortSwigger Web Security Academy, and a virtual home lab.</p>
-            <p>The Projects section showcases write-ups, walkthroughs, and mock reports I created to demonstrate my skills and learning from these practical experiences.</p>
-            <p>I also have one year of work experience in a contract role at the Synchrotron Light Research Institute (Thailand), where I worked in the IT department. This provided real-world experience in a corporate environment, complementing my previous self-employed work as an IT support technician helping local clients.</p>
-            <p>To further develop my ethical hacking skills in real-world scenarios, I joined the Bug Bounty Program on Bugcrowd.</p>
-            <p>I'm committed to continuously improving and staying up to date with industry standards. My GitHub-hosted write-ups and walkthroughs reflect my learning journey. While they may still be a work in progress, they will continue to evolve into more structured and organized content.</p>
-            <p>See my full qualification: </p>
-            <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">Profile</a>
+            <p>My practical experience includes hands-on challenges like CTFs, TryHackMe labs, PortSwigger Web Security Academy, and running a personal virtual home lab.</p>
+            <p>At the Synchrotron Light Research Institute (Thailand), I gained valuable IT experience supporting corporate environments and networks.</p>
+            <p>I actively participate in Bugcrowd's Bug Bounty Program to sharpen real-world ethical hacking skills.</p>
+            <p>My GitHub repositories host detailed write-ups, walkthroughs, and mock reports documenting my learning journey and projects.</p>
+            <p>This portfolio reflects ongoing growth as I organize and deepen my cybersecurity expertise.</p>
         </section>
         <section class="bg-2">
-            <h2>Contact</h2>
-            <p>Contact me: <a href="mailto:hexterika.cyberlab@hexterika-breaks-free.website">hexterika.cyberlab@hexterika-breaks-free.website</a></p>
-            <!-- I had trouble with the backend form submission from Formspark and possibly Formspree as well. It triggered Windows Defender and Virus Total so I am going to come back to fix this later. For now I am just going to show my email instead.
-            <form action="https://example.com" method="POST">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
-                <br>
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-                <br>
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="13" required></textarea>
-                <br>
-                <button type="submit">Send</button>
-            </form>
-            -->
+            <h2>Skills & Tools</h2>
+                <p>These are the core skills and technologies I use regularly in my penetration testing and cybersecurity work:</p>
+                <ul>
+                    <li><strong>Penetration Testing Tools:</strong> Kali Linux, Nmap, Burp Suite, Metasploit, Wireshark</li>
+                    <li><strong>Operating Systems:</strong> Linux (Ubuntu, Kali), Windows, Windows Server (Active Directory)</li>
+                    <li><strong>Programming & Scripting:</strong> Python, Bash, PowerShell</li>
+                    <li><strong>Web Technologies:</strong> HTTP, HTTPS, OWASP Top 10, SQL Injection, XSS</li>
+                    <li><strong>Cloud & Virtualization:</strong> AWS (basic), VirtualBox, Docker</li>
+                    <li><strong>Other Skills:</strong> Vulnerability Assessment, Network Reconnaissance, Social Engineering Awareness</li>
+                </ul>
         </section>
-        <section class="bg-1">
-            <h2>Social Medias</h2>
+        <section class="bg-2">
+            <h2>🚩 Featured Project</h2>
+                <p>Here's a highlight from my cybersecurity work — a mock penetration test report simulating real-world assessment and documentation standards.</p>
+                <p>Below are sample screenshots from my mock penetration testing report. These demonstrate how I structure findings, provide remediation steps, and document methodology.</p>
+                <section class="bg-1">
+                    <img src="assets/images/cyberlab/mockPentestReportTableOfContent.png" alt=""/>
+                    <img src="assets/images/cyberlab/mockPentestReportConfidentialityAndDisclaimer.png" alt=""/>
+                    <img src="assets/images/cyberlab/mockPentestReportContactInfo.png" alt=""/>
+                    <img src="assets/images/cyberlab/mockPentestReportFindingSeverityAndExecutiveSummary.png" alt=""/>
+                    <img src="assets/images/cyberlab/mockPentestReportTestScope.png" alt=""/>
+                    <img src="assets/images/cyberlab/mockPentestReportMethodology.png" alt=""/>
+                </section>
+                <p>You can view the full mock penetration testing report on GitHub:</p>
+                <a href="https://github.com/sangsongthong-hexterika/MockPenetrationTestingReport" target="_blank" rel="noopener noreferrer">View Report on GitHub</a>
+        </section>
+        <section class="bg-2">
+            <h2>🧩 Sample Works & Projects</h2>
+            <p>Below is a collection of my cybersecurity projects and write-ups hosted on GitHub. These include walkthroughs, mock reports, bug bounty findings, and self-driven labs — each reflecting skills I've practiced and refined through hands-on learning.</p>
+            <h3>📄 Mock Reports</h3>
             <ul>
-                <li><a href="https://www.linkedin.com/in/sangsongthong-chantaranothai/" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-                <li><a href="https://www.facebook.com/share/165WozGYNW/" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-                <li><a href="https://www.instagram.com/hexterika.cyberlab?igsh=cTRoaGxmNGxrcmMz" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-                <li><a href="https://github.com/sangsongthong-hexterika" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-                <li><a href="https://tryhackme.com/p/gexter5thm" target="_blank" rel="noopener noreferrer">TryHackMe Profile</a></li>
+                <li><a href="https://github.com/sangsongthong-hexterika/MockPenetrationTestingReport" target="_blank" rel="noopener noreferrer">Mock Penetration Testing report</a></li>
             </ul>
-        <!--Use icons + hover effect to describe the icons-->
+            <h3>🧪 Labs & Walkthroughs</h3>
+            <ul>
+                <li><a href="https://github.com/sangsongthong-hexterika/TryHackMe-Walkthroughs" target="_blank" rel="noopener noreferrer">TryHackMe walkthroughs</a></li>
+                <li><a href="https://github.com/sangsongthong-hexterika/PortSwiggerWalkthroughs" target="_blank" rel="noopener noreferrer">Port Swigger walkthroughs</a></li>
+                <li><a href="https://github.com/sangsongthong-hexterika/AD-VirtualHomeLab1" target="_blank" rel="noopener noreferrer">Active Directory Virtual Home Lab 1</a></li>
+            </ul>
+            <h3>💻 IT & Admin</h3>
+            <ul>
+                <li><a href="https://github.com/sangsongthong-hexterika/IT-Cybersecurity-OneShots" target="_blank" rel="noopener noreferrer">IT Cybersecurity Oneshots</a></li>
+            </ul>
+            <h3>🐞 Bug Bounty & VDP</h3>
+            <ul>
+                <li><a href="https://github.com/sangsongthong-hexterika/BugBountyHunting" target="_blank" rel="noopener noreferrer">Bug Bounty Report Template</a></li>
+                <li><a href="https://bugcrowd.com/hexterika-cyberlab" target="_blank" rel="noopener noreferrer">Bugcrowd Profile</a></li>
+            </ul>
         </section>
     </main>
         
