--- a/index.html
+++ b/index.html
@@ -8,28 +8,92 @@
     <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
+    
+    <!-- Header Section -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cyberlab.html">Hexterika Cyberlab</a></li>
+                <li><a href="designer.html">Hexterika Designer</a></li>
+                <li><a href="marketing.html">Hexterika Marketing</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <!-- Main Content (Grid Layout) -->
     <main>
         <section class="bg-1">
             <h1>Welcome to Hexterika Breaks Free</h1>
-            <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong"/>
-            <p><strong>Beyond Boundaries</strong> — Creative, Secure, and Strategic Services at Hexterika Breaks Free.</p>
-            <p>At Hexterika Breaks Free, I—the founder of the Hexterika brand—believe that a person can have multiple, unrelated interests and turn them into potential sources of income.</p>
-            <p>Hexterika Breaks Free challenges traditional beliefs that limit people's creativity and mindset to only a few closely related things. It encourages the pursuit of one's passions and turning them into job skills that generate income and allow work across unrelated fields.</p>
-            <p>This belief is what makes the Hexterika brand unique and different.</p>
-            <p>To show that this idea is possible, I created Hexterika Breaks Free as proof that it's achievable in the real world. The “Breaks Free” part represents my desire to break away from limiting norms, to be myself, follow my passions, and live freely.</p>
-            <h2>See My Full Qualification</h2>
-            <a href="https://github.com/sangsongthong-hexterika/AboutMeProfessional" target="_blank" rel="noopener noreferrer">About Me Professional</a>
+                <img src="assets/images/hexterika-breaks-free/myProfessionalHeadshot1.jpg" alt="Professional Headshot of Sangsongthong"/>
+                <p><strong>Hello, I'm Sangsongthong</strong> — a multidisciplinary professional passionate about cybersecurity, digital design, and technology. This website is both my personal portfolio and a gateway to my freelance services under the Hexterika brand.</p>
+                <p><strong>Hexterika Breaks Free</strong> represents more than a name — it reflects my belief in breaking boundaries and building a career across different fields that inspire me. It's my personal mission and future vision wrapped into one brand: creative, secure, and adaptable.</p>
         </section>
         <section class="bg-2">
-            <p>Secure your system at</p>
-            <a href="cyberlab.html">Hexterika Cyberlab</a>
-            <p>Attract attention to your website with custom design at</p>
-            <a href="designer.html">Hexterika Designer</a>
-            <p>Grows your present on social media with</p>
-            <a href="marketing.html">Hexterika Marketing</a>
-            <p>Contact me directly without needing to browse the rest of my website.</p>
-            <a href="contact.html">Contact</a>
+            <h2>My Core Focus</h2>
+                <p>I specialize in two primary areas:</p>
+                <ul>
+                    <li><strong>Cybersecurity & IT</strong>--<a href="cyberlab.html">Explore Hexterika Cyberlab</a></li>
+                    <li><strong>UX/UI Design</strong>--<a href="designer.html">Visit Hexterika Designer</a></li>
+                </ul>
+        </section>
+        <section class="bg-1">
+            <h2>My Secondary Focus</h2>
+                <p>In addition to my core focus areas, I also apply my skills in:</p>
+                <ul>
+                    <li><strong>Programming</strong>--I built this website myself. My experience includes Python, basic frontend development (HTML, CSS, JavaScript, React), Git/GitHub, and Arduino coding (self-taught during a university project).</li>
+                    <li><strong>Social Media Marketing</strong>--I manage the Facebook and Instagram accounts for Hexterika Cyberlab and Hexterika Designer. I'm Meta Certified in Digital Marketing and skilled in campaign strategy, content creation, and performance tracking.</li>
+                </ul>
+                <p>These skills support the growth of my Hexterika brand and show my adaptability in the digital space.</p>
+                <p><a href="certs.html">View My Full Certifications →</a></p>
+        </section>
+        <section class="bg-2">
+            <h2>Soft Skills & General Abilities</h2>
+                <p>I bring strong non-technical skills developed through international experience, self-driven learning, and cross-functional roles. I'm adaptable, reliable, and effective at working independently or with global teams.</p>
+            <section class="bg-1">
+                <h3>Core Strengths</h3>
+                    <ul>
+                        <li>Time Management & Prioritization</li>
+                        <li>Remote Work & Cross-Timezone Collaboration</li>
+                        <li>CRM Tools: Salesforce, Zoho CRM</li>
+                        <li>Digital Productivity: Google Workspace, Notion, Microsoft Office</li>
+                        <li>Client Support & Multitasking</li>
+                    </ul>
+            </section>
+            <section class="bg-1">
+                <h3>Languages</h3>
+                    <ul>
+                        <li><strong>Thai:</strong> Native</li>
+                        <li><strong>English:</strong> TOEIC C1 Writing, B1 Speaking, B2 Listening, B1 Reading</li>
+                        <li><strong>Romanian, French, Spanish:</strong> Beginner</li>
+                    </ul>
+            </section>
+        </section>
+        <section class="bg-1">
+            <h2>Education Background</h2>
+                <ul>
+                    <li><strong>Bachelor of Sport Science</strong>--Suranaree University of Technology (Thailand)</li>
+                    <ul>
+                        <li>Led an Arduino project for a Sport Tech course — handled planning, coding, and delivery under a tight deadline</li>
+                        <li>Independently began learning Linux and Python as a personal entry point into tech</li>
+                    </ul>
+                    <li><strong>Exchange Program</strong>--Skyline High School, Colorado, USA</li>
+                    <ul>
+                        <li>Gained real-world English fluency and developed soft skills like adaptability, cross-cultural communication, and problem-solving through full immersion in a U.S. high school environment.</li>
+                    </ul>
+                </ul>
+        </section>
+        <section class="bg-2">
+            <h2>About the Brand</h2>
+                <p>Hexterika is my professional identity — uniting my services under one creative and strategic brand. In the future, I plan to grow Hexterika Breaks Free into a full company that reflects my journey, values, and multidisciplinary work.</p>
+        </section>
+        <section class="bg-1">
+             <p>Explore my services and work samples:</p>
+            <ul>
+                <li><a href="cyberlab.html">Cybersecurity -- Hexterika Cyberlab</a><br/></li>
+                <li><a href="designer.html">UX/UI Design -- Hexterika Designer</a><br/></li>
+                <li><a href="contact.html">Get in Touch</a></li>
+            </ul>
         </section>
     </main>
     <!-- Footer Section -->
