Add TryHackMe profile link into the labs and walkthroughs section

--- a/cyberlab.html
+++ b/cyberlab.html
@@ -81,6 +81,7 @@
                 <li><a href="https://github.com/sangsongthong-hexterika/TryHackMe-Walkthroughs" target="_blank" rel="noopener noreferrer">TryHackMe walkthroughs</a></li>
                 <li><a href="https://github.com/sangsongthong-hexterika/PortSwiggerWalkthroughs" target="_blank" rel="noopener noreferrer">Port Swigger walkthroughs</a></li>
                 <li><a href="https://github.com/sangsongthong-hexterika/AD-VirtualHomeLab1" target="_blank" rel="noopener noreferrer">Active Directory Virtual Home Lab 1</a></li>
+                <li><a href="https://tryhackme.com/p/gexter5thm" target="_blank" rel="noopener noreferrer">TryHackMe Profile</a></li>
             </ul>
             <h3>💻 IT & Admin</h3>
             <ul>
